<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    
    <string name="discovery_inited">Discovery Initiated</string>
    <string name="discovery_failed">Discovery Failed</string>
    <string name="connect_failed">Connect failed. Retry.</string>
    <string name="channel_lost">Channel lost. Trying again</string>
    <string name="server_channel_maybe_lost">Severe! Channel is probably lost premanently. Try Disable/Re-Enable P2P.</string>
    <string name="abort_connect">Aborting connection</string>
    <string name="cancel">Press back to cancel</string>
    <string name="connecting_to">Connecting to :</string>
    <string name="group_owner_ip">Group Owner IP - </string>
    <string name="available">Available</string>
    <string name="invited">Invited</string>
    <string name="connected">Connected</string>
    <string name="failed">Failed</string>
    <string name="unavailable">Unavailable</string>
    <string name="unknown">Unknown</string>
    <string name="finding_peers">finding peers</string>    
   <string name="exit">Exit</string>
   
   <string name="left">Left</string>
   <string name="right">Right</string>
   <string name="up">Up</string>
   <string name="down">Down</string>
   <string name="ok">OK</string>
   <string name="rc">Controller</string>
   <string name="touch_area">Aouch Area</string>
   
   <string name="btn_power">Power</string>
   <string name="btn_info">Info</string>
   <string name="btn_home">Home</string>
   <string name="btn_search">Search</string>
   <string name="btn_back">Back</string>
   <string name="btn_option">Option</string>
   <string name="btn_fast_back">Fast Back</string>
   <string name="btn_fast_forward">Fast Forward</string>
   <string name="btn_pause">Pause</string>
   <string name="btn_pre">Previous</string>
   <string name="btn_next">Next</string>
    
</resources>
