<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- Power button -->
    <LinearLayout 
        android:id="@+id/layout_power"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/btn_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_power" />
    </LinearLayout>
    
    <!-- info home search button -->
    <LinearLayout 
        android:id="@+id/layout_info_home_search"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_info" />
        <Button 
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_home" />
        <Button 
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_search" />"
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />
    
    <!-- up button -->
    <LinearLayout 
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up" />
    </LinearLayout>

    <!-- left ok right button -->
    <LinearLayout
        android:id="@+id/layout_left_ok_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right" />

    </LinearLayout>

    <!-- down button -->
    <LinearLayout
        android:id="@+id/layout_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down" />
    </LinearLayout>
    
    <!-- back and options button -->
    <LinearLayout
        android:id="@+id/layout_back_option"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
        <Button 
            android:id="@+id/btn_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_option" />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />
    
    <!-- fast back and fast forward button -->
     <LinearLayout 
        android:id="@+id/layout_fast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/btn_fast_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fast_back" />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
        <Button 
            android:id="@+id/btn_fast_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fast_forward" />
    </LinearLayout>
    
    <!-- pause button -->
    <LinearLayout 
        android:id="@+id/layout_pause"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">"
        <Button 
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause" />"
    </LinearLayout>
    
    <!-- previous and next button -->
     <LinearLayout 
        android:id="@+id/layout_review"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pre" />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
        <Button 
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next" />
    </LinearLayout>
    
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />

    <LinearLayout
        android:id="@+id/touchLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/touch_area" />

    </LinearLayout>

</LinearLayout>